[package]
name = "brew"
version = "0.1.0"
authors = ["Ian Wahbe <ian@wahbe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-rs = { path = "../version-rs", version = "0.1", features = ["serde", "lossy"] }
command-builder = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
