[package]
name = "brew"
version = "0.1.0"
authors = ["Ian Wahbe <ian@wahbe.com>"]
edition = "2018"
description = "A rust wrapper around the homebrew package manager cli"
repository = "https://github.com/iwahbe/brew-rs"
license = "MIT OR Apache-2.0"
keywords = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-rs = { version = "0.2", features = ["serde", "lossy"] }
command-builder = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
